<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>no.nav.regoppslag</groupId>
	<artifactId>regoppslag</artifactId>
	<version>1.0-SNAPSHOT</version>

	<packaging>pom</packaging>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>registerinfo</module>
		<module>postadresse</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.0</version>
	</parent>

	<properties>
		<java.version>21</java.version>
		<argLine>-Dfile.encoding=UTF8</argLine>

		<resilience4j.version>2.2.0</resilience4j.version>
		<rxjava.version>3.1.9</rxjava.version>
		<microsoft-graph.version>6.21.0</microsoft-graph.version>
		<azure-identity.version>1.14.2</azure-identity.version>
		<springdoc-openapi-starter-webmvc-ui.version>2.7.0</springdoc-openapi-starter-webmvc-ui.version>
		<nv-i18n.version>1.29</nv-i18n.version>
		<logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
		<token-support.version>5.0.13</token-support.version>

		<!-- Interne NAV-avhengigheter -->
		<dokmet-api.version>2024.11.18-12.31-2a6bf20</dokmet-api.version>
		<brevdata-felles.version>29-af3d66d</brevdata-felles.version>

		<!-- Test -->
		<spring-cloud-contract-wiremock.version>4.1.4</spring-cloud-contract-wiremock.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.regoppslag</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.regoppslag</groupId>
				<artifactId>registerinfo</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.regoppslag</groupId>
				<artifactId>postadresse</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokmet</groupId>
				<artifactId>api</artifactId>
				<version>${dokmet-api.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dok.metaforcemal</groupId>
				<artifactId>dok-brevdata-felles</artifactId>
				<version>${brevdata-felles.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot3</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc-openapi-starter-webmvc-ui.version}</version>
			</dependency>
			<dependency>
				<groupId>io.reactivex.rxjava3</groupId>
				<artifactId>rxjava</artifactId>
				<version>${rxjava.version}</version>
			</dependency>
			<dependency>
				<groupId>com.neovisionaries</groupId>
				<artifactId>nv-i18n</artifactId>
				<version>${nv-i18n.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring</artifactId>
				<version>${token-support.version}</version>
			</dependency>
			<dependency>
				<groupId>com.microsoft.graph</groupId>
				<artifactId>microsoft-graph</artifactId>
				<version>${microsoft-graph.version}</version>
			</dependency>
			<dependency>
				<groupId>com.azure</groupId>
				<artifactId>azure-identity</artifactId>
				<version>${azure-identity.version}</version>
			</dependency>

			<!-- Test dependencies -->
			<dependency>
				<groupId>no.nav.regoppslag</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
				<type>test-jar</type>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring-test</artifactId>
				<version>${token-support.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>